# WickedEngine

./: .gitignore  CMakeLists.txt
Template_Linux/: CMakeLists.txt  Example_DiscreteData.cpp  Example_DiscreteData.h  main.cpp  stdafx.h
Template_Linux/Discrete/: discrete.cpp  discrete.h  discrete_internal.h
Template_Linux/Discrete_Data/: discrete.cpp  discrete.h  discretedata.cpp  discretedata.h  discretedata_draw.cpp  discretedata_internal.h  imgui_impl_sdl.cpp  imgui_impl_sdl.h
Template_Linux/ImGui/: imconfig.h  imgui.cpp  imgui.h  imgui_widgets.cpp
Template_Linux/tmp/: imconfig.i
